# async-fastapi-template

./: .dockerignore  .editorconfig  .env.template  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/pg_versions/: 2022-04-29_12-12_init_db.py  2022-05-24_11-56_add_user_table.py  2022-06-01_12-18_add_user_table.py  2022-06-01_12-35_add_user_table.py
app/: fastapi_app.py  initial_data.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: login.py  user.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  user.py
app/db/: base.py  init_db.py  metadata.py  session.py
app/exceptions/: __init__.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  user.py
app/utils/: __init__.py  email.py
tests/: common.py  conftest.py
tests/api/v1/: test_login.py  test_user.py
tests/crud/: test_user.py
tests/fixtures/: common.py  db.py  fastapi.py  postgres.py
tests/utils/: user.py  utils.py
